fix: truncate notification titles

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -236,6 +236,12 @@ canvas {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
+.notification-title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .custom-puzzle-list {
   width: min(95vw, 400px);
 
